--- a/styles.css
+++ b/styles.css
@@ -45,10 +45,10 @@ body {
     padding-right: 30px;
 }
 
-.icon-link{
-    text-decoration: none; 
+.icon-link {
+    text-decoration: none;
     color: #333;
-    transition:  0.3s;
+    transition: 0.3s;
 }
 
 .moon-icon {
@@ -57,7 +57,7 @@ body {
     font-size: 40px;
 }
 
-.icon-link:hover{
+.icon-link:hover {
     color: rgb(222, 87, 87);
     cursor: pointer;
 }
@@ -77,7 +77,7 @@ body {
     border-top-right-radius: 8px;
 }
 
-.first-title{
+.first-title {
     display: flex;
     justify-content: center;
     font-size: 55px;
@@ -85,7 +85,7 @@ body {
     margin-top: 150px;
 }
 
-.first-pargraph{
+.first-pargraph {
     font-size: 1rem;
     display: flex;
     justify-content: center;
@@ -102,7 +102,7 @@ body {
     position: relative;
 }
 
-.title-second{
+.title-second {
     font-size: 40px;
     display: flex;
     justify-content: center;
@@ -113,21 +113,21 @@ body {
     margin-top: 70px;
 }
 
-.second-paragraph{
+.second-paragraph {
     justify-content: center;
     text-align: center;
     font-size: 16px;
     line-height: 1.5;
 }
 
-.section-part2{
+.section-part2 {
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: row;
 }
 
-.first-col{
+.first-col {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -135,18 +135,18 @@ body {
     padding: 15px;
 }
 
-.icon{
+.icon {
     width: 150px;
     height: 150px;
     margin-top: 20px;
 }
 
-.icon-paragraph{
+.icon-paragraph {
     font-size: 16px;
     text-align: center;
 }
 
-.view-link{
+.view-link {
     font-size: 18px;
     font-weight: 500;
     color: #f15e75;
@@ -154,15 +154,15 @@ body {
     padding-top: 10px;
 }
 
-.view-link:hover{
+.view-link:hover {
     color: #f33f5a;
 }
 
-.icon-title{
+.icon-title {
     font-size: 20px;
 }
 
-.second-col{
+.second-col {
     width: 33.33%;
     display: flex;
     flex-direction: column;
@@ -170,7 +170,7 @@ body {
     padding: 15px;
 }
 
-.third-col{
+.third-col {
     width: 33.33%;
     display: flex;
     flex-direction: column;
@@ -181,7 +181,48 @@ body {
 .third {
     width: 100%;
     height: 300px;
+    display: flex;
+    flex-direction: row;
+    background-color: rgba(255, 255, 255, 0.085);
 }
+
+.third>* {
+    width: 25%;
+    height: 100%;
+    /* padding-top: 40px; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 50px;
+}
+
+.bi-people {
+    font-size: 45px;
+    color: white;
+    margin-bottom: -75px;
+}
+
+.count {
+    font-weight: 300;
+    font-size: 75px;
+    color: white;
+}
+
+.det {
+    color: white;
+    font-size: 15px;
+    margin-top: -40px;
+    letter-spacing: 1px;
+    font-weight: 400;
+    font-size: 'Work Sans', sans-serif;
+}
+
+.all-icon {
+    font-size: 45px;
+    color: white;
+    margin-bottom: -42px;
+}
+
 
 .fourth {
     width: 100%;
