--- a/styles.css
+++ b/styles.css
@@ -268,19 +268,19 @@ body {
     margin: 1px;
 }
 
-.icons{
+.icons {
     font-size: 40px;
     color: #333;
     margin-bottom: 10px;
 }
 
-.bottom-title{
+.bottom-title {
     font-weight: 400;
     margin-top: 10px;
     color: #242424;
 }
 
-.bottom-pargraph{
+.bottom-pargraph {
     text-align: center;
     font-size: 14px;
     font-weight: 300;
@@ -291,8 +291,120 @@ body {
 
 .fifth {
     width: 100%;
-    height: 1500px;
-    background-color: blueviolet;
+    height: 1750px;
+    background-color: white;
+}
+
+.top-five {
+    background-color: white;
+    width: 100%;
+    height: 380px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.title-top-five {
+    font-size: 38px;
+    font-weight: 300;
+}
+
+.parag-top-five {
+    margin-top: 10px;
+    font-size: 15px;
+    line-height: 1.5;
+}
+
+.middle-five {
+    display: flex;
+    flex-direction: column;
+}
+
+.middle-five > *{
+    width: 100%;
+    height: 400px;
+    margin: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.left-middle-five{
+    display: flex;
+    flex-direction: column;
+    align-items:  center;
+    /* justify-content: center; */
+    text-align: center;
+    width: 35%;
+    height: 100%;
+}
+
+
+.title-left-middle-five{
+    font-size: 23px;
+    font-weight: 400;
+    color: #333;
+    margin-top: 30px;
+}
+
+.icon-five{
+    font-size: 45px;
+    color: #f15e75;
+}
+
+.parag-left-middle-five{
+    font-size: 15px;
+    line-height: 1.5;
+    
+}
+
+.right-middle-five{
+    width: 35%;
+    height: 100%;
+    display: flex;
+    justify-content:  center;
+}
+
+.img-first-middle{
+    height: 477px;
+    width: 300px;
+}
+
+.bottom-five{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.first-bottom-five{
+    width: 35%;
+    height: 368px;
+}
+
+.title-first-bottom{
+    font-size: 25px;
+    font-weight: 500;
+    margin-top: 45px;
+    line-height: 1.5;
+    color: #333;
+}
+
+.parag-first-bottom{
+    font-size: 15px;
+    line-height: 1.5;
+}
+
+.second-bottom-five{
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+    width: 20%;
+}
+.second-bottom-five >*{
+    margin: 8px;
+    margin-left: 15px;
 }
 
 .sixth {
