--- a/styles.css
+++ b/styles.css
@@ -433,7 +433,7 @@ body {
     margin-top: 5px;
 }
 
-.bottom-six{
+.bottom-six {
     width: 100%;
     height: 100%;
     display: flex;
@@ -441,15 +441,15 @@ body {
 }
 
 
-.bottom-six > * {
+.bottom-six>* {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 33.2%;
-    height:646px;
+    height: 646px;
 }
 
-.card{
+.card {
     width: 300px;
     height: 540px;
     background-color: white;
@@ -457,12 +457,12 @@ body {
     transition: .5s;
 }
 
-.card:hover{
+.card:hover {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     margin-top: -10px;
 }
 
-.img-card{
+.img-card {
     width: 100%;
     height: 250px;
     object-fit: cover;
@@ -470,7 +470,7 @@ body {
     border-top-right-radius: 5px;
 }
 
-.bottom-card{
+.bottom-card {
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 10px;
@@ -478,14 +478,14 @@ body {
     flex-direction: column;
 }
 
-.link-six{
+.link-six {
     color: #f15e75;
     text-decoration: none;
     font-size: 14px;
     font-weight: 500;
 }
 
-.title-card{
+.title-card {
     font-size: 25px;
     font-weight: 400;
     margin-top: 10px;
@@ -493,25 +493,112 @@ body {
     color: #242424;
 }
 
-.date{
+.date {
     font-size: 15px;
     color: #3333338f;
 }
 
-.parag-card{
+.parag-card {
     font-size: 15px;
     line-height: 1.5;
 }
 
-.name-card{
+.name-card {
     font-size: 15px;
     color: #333;
 }
 
 .seventh {
     width: 100%;
-    height: 800px;
-    background-color: aquamarine;
+    height: 1100px;
+    background-color: white;
+}
+
+.top-seven {
+    width: 100%;
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+}
+
+.title-seven {
+    color: #242424;
+    font-size: 35px;
+    font-weight: 300;
+}
+
+.parag-seven {
+    font-size: 15px;
+    line-height: 1.5;
+}
+
+.bottom-seven {
+    width: 1000px;
+    height: 840px;
+    display: flex;
+    flex-direction: row;
+    margin: auto;
+}
+
+.box-photo {
+    position: absolute;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+
+.box-hover{
+    width: 25%;
+    height: 450px;
+    align-items: center;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 30px;
+    display: none;
+    transition: .3s;
+}
+
+
+.e2{
+    height: 35%;
+}
+
+.e4{
+    height: 20%;
+}
+.e5{
+    margin-top: -70px;
+    height: 35%;
+}
+.e6{
+    height: 20%;
+}
+
+.box-icon{
+    display: flex;
+    flex-direction: row;
+    width: 70px;
+    justify-content: space-between;
+    
+}
+
+.title-img{
+    margin-top: 10px;
+    font-size: 25px;
+    font-weight: 400;
+    color: black;
+}
+
+.photo {
+    max-width: 100%;
+    width: 308px;
+    border-radius: 7px;
+    margin: 10px;
+    transition: .5s;
 }
 
 .eighth {
