--- a/styles.css
+++ b/styles.css
@@ -742,27 +742,27 @@ body {
     background-color: white;
 }
 
-.top-nine{
+.top-nine {
     width: 100%;
     height: 150px;
     display: flex;
     justify-content: center;
 }
 
-.title-nine{
+.title-nine {
     font-size: 35px;
     color: #333;
     font-weight: 300;
     margin-top: 70px;
 }
 
-.bottom-nine{
+.bottom-nine {
     width: 100%;
     height: 248px;
     display: flex;
 }
 
-.bottom-nine > *{
+.bottom-nine>* {
     width: 16.5%;
     height: 121px;
     display: flex;
@@ -771,13 +771,13 @@ body {
     padding-top: 10px;
 }
 
-.logo{
+.logo {
     width: 135px;
     height: 121px;
     transition: .4s;
 }
 
-.logo:hover{
+.logo:hover {
     margin-top: -5px;
 }
 
@@ -787,4 +787,45 @@ body {
     background-color: white;
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
+    border-top: 1px solid rgba(0, 0, 0, 0.147);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.right-ten {
+    display: flex;
+    flex-direction: row;
+    margin-left: 15px;
+    margin-top: 15px;
+}
+
+.parag-ten {
+    font-size: 15px;
+}
+
+.creator {
+    color: #FC665F;
+    margin-left: 5px;
+    font-weight: 500;
+}
+
+.left-ten {
+    width: 300px;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.end-icons{
+    margin: 10px;
+    font-size: 20px;
+    color: #f15e75;
+    transition: 0.3s;
+}
+
+.end-icons:hover{
+    color: #f33f5a;
 }
