--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,10 @@ body {
     padding-right: 30px;
 }
 
+.list{
+    display: none;
+}
+
 .icon-link {
     text-decoration: none;
     color: #333;
@@ -835,7 +839,7 @@ body {
 
 @media only screen and (max-width: 500px) {
     body {
-        background-color: lightblue;
+        background-color: #333;
         margin: 0;
     }
 
@@ -845,33 +849,68 @@ body {
 
     .header {
         height: 50px;
-        background-color: #333333a3;
+        background-color: #dbd9d900;
         border-top-left-radius: 8px;
         border-top-right-radius: 8px;
-        justify-content: center;
+        justify-content:space-between;
         align-items: center;
     }
 
     .links>a {
-        font-size: 13px;
+        font-size: 15px;
         font-weight: 500;
-        padding: 2px;
-        color: white;
-
+        color: #f3f1f1;
+        margin-left: 30px;
+        margin-top: 10px;
+        margin-bottom: 15px;
     }
 
     .links>a:hover {
-        font-size: 13px;
-        color: white;
+        font-size: 15px;
+        color: #f097a4;
     }
 
+
     .links {
-        padding-top: 0;
+        width: 160px;
+        height: 280px;
+        background-color: #24232379;
+        backdrop-filter: blur(7px);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border-radius: 5px;
+        margin-top: 350px;
+        margin-left: 170px;
+        z-index: 99;
+        transition: 0.3s;
+        position: absolute;
+        display: none;
+    }
+
+    .C-first{
+        width: 100%;
+        height: 100%;
+    }
+
+    .items {
+        display: flex;
+    }
+
+
+    .list{
+
+        display: flex;
+        font-size: 30px;
+        cursor: pointer;
+        margin-right: 20px;
     }
 
     .moon-icon {
-        font-size: 0px;
-        margin-left: -20px;
+        font-size: 28px;
+        margin-top: -15px;
+        margin-left: -15px;    
     }
 
     .first-title {
